fix social icon alignemnt

--- a/_sass/04-sidebar.sass
+++ b/_sass/04-sidebar.sass
@@ -42,7 +42,7 @@
 
 #sidebar-social
   padding: 0 $social-icon-outer-padding 3vh
-  text-align: center
+  text-align: left
 
 .sidebar-social-icon
   display: inline-block
